--- a/01 Drum Kit/index.html
+++ b/01 Drum Kit/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button data-key="38" class="key up">Start ⬆</button>
+  <button data-key="40" class="key" onclick="stopMusic()">Stop ⬇</button>
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -54,8 +56,48 @@
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="38" src="sounds/tink.wav"></audio>
+  <audio data-key="40" src="sounds/tink.wav"></audio>
 <script>
+  
+function stopMusic () {
+    window.removeEventListener('keydown', startMusic) // stop event listening
 
+    // add another event listening only for up key
+    window.addEventListener('keydown', (e) => {  
+      const upKey = document.querySelector('.up')  
+      if (e.keyCode == '38') {   
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+        audio.play()
+        window.addEventListener('keydown', startMusic);
+      }
+    });
+}
+
+function startMusic (e) {
+    // get the sound
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    // get the key
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+
+    // if there is no key associated with the audio, do nothing
+    if (!audio) return false;
+
+    // if down key is pressed, stop the music
+    if (e.keyCode == '40') stopMusic()
+    
+    audio.currentTime = 0;
+    audio.play()
+    key.classList.add('playing') 
+
+    // listen to changes for specific key's TransitionEvent 
+    key.addEventListener('transitionend',(e) => {
+    if(e.propertyName !== 'transform') return false; // ignore if it is not tranform event
+      // console.log(e.target) will grab the key again
+      e.target.classList.remove('playing'); 
+      }); 
+  }
+  window.addEventListener('keydown', startMusic);
 </script>
 </body>
 </html>
