Add Follow Along Link Highlighter

--- a/22 Follow Along Link Highlighter/index.html
+++ b/22 Follow Along Link Highlighter/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>👀👀👀Follow Along Nav</title>
+  <title>👀👀👀Follow Along Nav </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -48,6 +48,7 @@
     top: coordinate.top + window.scrollY,
     left: coordinate.left + window.scrollX
   };
+  console.log(coords)
   // applying it to the inline style
     highlight.style.width =`${coords.width}px`;
     highlight.style.height =`${coords.height}px`;
