Add start game button

--- a/30 Whack A Mole/index-START.html
+++ b/30 Whack A Mole/index-START.html
@@ -59,7 +59,18 @@
     return hole;
   }
 
-  
+  function startGame() {
+    scoreBoard.textContent = 0;
+    timeUp = false;
+    score = 0;
+    peep();
+    setTimeout(() => timeUp = true, 10000)
+  }
+
+
+
+  moles.forEach(mole => mole.addEventListener('click', bonk));
+
 </script>
 </body>
 </html>
