--- a/31 Task Manager/index.html
+++ b/31 Task Manager/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>JS31 Task Manager </title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
     <body>
@@ -22,11 +23,13 @@
                 </select>
                 <label for="owner">Assigned To</label>
                 <input type="text" class="form-control" id="owner" placeholder="Enter responsible ...">
-                <button type="submit" class="btn btn-primary">Add</button>
+                <br> <button type="submit" class="btn btn-primary">Add</button>
             </form>
-            <div class="col-lg-12">
-                <div id="taskList">
-                </div>
+         <br>
+            <div class="col-lg-10">
+              <hr>
+                <ul id="taskList">
+                </ul>
               </div>
             </div>
             <script src="scripts.js"></script>
