Add task manager project

--- a/31 Task Manager/index.html
+++ b/31 Task Manager/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
     <body>
+      <button class="rm-all btn btn-danger" onclick="removeAll()"> Remove all done tasks </button>
       <div class="container">
+        <h1 class="header"> Task Manager </h1>
         <div class="jumbotron">
             <h3>Add New Task:</h3>
             <form id="taskForm">
